# quillmark-quiver

./: .devcontainer.json  .gitignore  CONTRIBUTING.md  ENGINE_TASKING.md  MIGRATION.md  PROGRAM.md  QUILLMARK_FEEDBACK.md  README.md  mkdocs.yml  package-lock.json  package.json  tsconfig.json
.github/agents/: Programmer.md
.github/workflows/: npm-publish.yml  release.yml
crates/bindings/cli/: Cargo.toml
crates/bindings/cli/src/: output.rs
crates/bindings/cli/src/commands/: info.rs  validate.rs
crates/fuzz/: Cargo.toml  README.md
docs/authoring/: cards.md
docs/format-designer/: creating-quills.md  quill-yaml-reference.md
docs/integration/: validation.md
phases/: 00-project-scaffold.md  01-core-types-and-errors.md  02-source-quiver-loader.md  03-registry-and-resolution.md  04-pack.md  05-packed-quiver-transports.md  06-polish-and-release.md  README.md
prose/designs/: ARCHITECTURE.md  EXTENDED_MARKDOWN.md  QUILL_VALUE.md  SCHEMAS.md  VERSIONING.md  WASM.md
prose/plans/: REQUIRE_QUILL_REF.md  REQUIRE_QUILL_REF_BINDINGS.md
prose/proposals/: advanced_field_types.md  date_rework.md
prose/schema-rework/: 00-overview.md  04-cutover.md  05-purge-and-docs.md
references/quillmark-registry/: .gitignore  (+2 more)
references/quillmark/crates/bindings/wasm/: Cargo.toml  README.md  basic.test.js  package.json  package.template.json  resolve.js  resolve.test.js  vitest.config.js
references/quillmark/crates/bindings/wasm/src/: engine.rs  lib.rs  types.rs
references/quillmark/crates/bindings/wasm/tests/: common.rs  metadata.rs  quillLoader.js  resolve_quill.rs  wasm_bindings.rs
references/quillmark/crates/fixtures/: Cargo.toml
references/quillmark/crates/fixtures/resources/: extended_metadata_demo.md  versioned_resume_major.md
references/quillmark/crates/fixtures/resources/appreciated_letter/: Quill.yaml
references/quillmark/crates/fixtures/resources/quills/classic_resume/0.1.0/: Quill.yaml
references/quillmark/crates/fixtures/resources/quills/usaf_memo/0.1.0/: Quill.yaml
references/quillmark/crates/fixtures/resources/quills/usaf_memo/0.1.0/__golden__/: public_schema.yaml
references/quillmark/crates/fixtures/resources/quills/usaf_memo/0.2.0/: Quill.yaml
scripts/: build-wasm.sh
src/: assert-node.ts  build.ts  built-loader.ts  bundle.ts  engine-types.ts  errors.ts  format.ts  hash.ts  index.ts  node.ts  pack.ts  packed-loader.ts  quiver-internal.ts  quiver-yaml.ts  quiver.ts  ref.ts  registry.ts  semver.ts  source-loader.ts  testing.ts  types.ts
(+222 files in other folders)
