[package]
name = "quillmark-cli"
version.workspace = true
edition.workspace = true
description = "Command-line interface for the Quillmark Markdown rendering system"
license.workspace = true
include.workspace = true
readme = "README.md"
homepage = "https://github.com/nibsbin/quillmark"
repository = "https://github.com/nibsbin/quillmark"
keywords = ["markdown", "pdf", "typst", "template", "cli"]
categories = ["command-line-utilities", "text-processing"]
publish = true

[[bin]]
name = "quillmark"
path = "src/main.rs"
test = false

[dependencies]
clap = { version = "~4.5", features = ["derive"] }
quillmark = { workspace = true }
quillmark-typst = { workspace = true, default-features = false, features = ["embed-default-font"] }
quillmark-core = { workspace = true }
anyhow = { workspace = true}
serde_json = { workspace = true }

