[package]
name = "quillmark-wasm"
version.workspace = true
edition.workspace = true
description = "WebAssembly bindings for quillmark"
license.workspace = true
repository = "https://github.com/nibsbin/quillmark"
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
quillmark = { workspace = true }
# Ensure the Typst backend is built for WASM with the embedded default font, but
# without the `native` feature (which would pull in native-only code).
# This explicitly sets quillmark-typst's features for this crate.
quillmark-typst = { workspace = true, default-features = false, features = [
    "embed-default-font",
] }
quillmark-core = { workspace = true }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = { workspace = true }
serde-wasm-bindgen = "0.6"
tsify = { version = "0.4.5", features = ["js"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
